# rust-icu-messageformat-string-catalog-converter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
benches/: README.md  formatter_benchmark.rs  large_file_benchmark.rs
benchmark_results/: 2025-06-18_15-54-57_325b2da8_Darwin_arm64.json  2025-06-18_15-59-45_325b2da8_Darwin_arm64.json  2025-06-18_16-37-44_7f3c9771_Darwin_arm64.json  2025-06-18_16-48-54_7f3c9771_Darwin_arm64.json  2025-06-18_17-17-02_4b54756c_Darwin_arm64.json  2025-06-18_17-37-58_ab758fee_Darwin_arm64.json  2025-06-18_17-44-12_a432d226_Darwin_arm64.json  2025-06-18_18-04-34_ddd8668b_Darwin_arm64.json  latest.json
samples/: README.md  generate_xcstrings.sh
samples/TestApp/TestApp/: ContentView.swift  TestAppApp.swift
samples/TestApp/TestApp.xcodeproj/: project.pbxproj
samples/TestApp/TestAppTests/: TestAppTests.swift
samples/TestApp/TestAppUITests/: TestAppUITests.swift  (+1 more)
scripts/: README.md  benchmark_tracker.sh  ci_benchmark.sh  generate_trend_report.sh
src/: lib.rs  main.rs  models.rs  xc_string_converter.rs  xcstring.rs  xcstring_converter.rs  xcstring_formatter.rs  xcstring_substitution_builder.rs  xcstrings.rs
src/converter/: formatter.rs  mod.rs  substitution_builder.rs  xcstring_converter.rs
src/models/: converter_options.rs  icu_message.rs  mod.rs
src/xcstrings/: mod.rs  types.rs
tests/: common.rs  edge_cases_test.rs
tests/fixtures/: basic  icu_messageformat  multiple  multiple_args  multiple_arguments  multiple_languages  plural  pluralization  select_splitting  simple_argument
(+13 files in other folders)
