[package]
name = "rust-icu-messageformat-string-catalog-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
icu-messageformat-parser = "0.0.2"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
linked_hash_set = "0.1.4"
serde = "1.0.197"
serde_json = "1.0.114"
similar-asserts = "1.5.0"
testing = "0.35.20"
